# Modified-Flex

./: .gitignore  LICENSE  README.md  package.json  pyproject.toml
.github/workflows/: pull_request.yml  push.yml
demo/: Makefile  pelicanconf.py  publishconf.py  pyproject.toml
demo/content/articles/: cara-install-git.md
demo/content/extras/: CNAME  _headers  _redirects  custom.css  custom.js  custom.min.css  custom.min.js
demo/content/pages/: tentang-saya.md
demo/content/pages/custom-error/: 403.md  404.md
demo/content/pages/hidden-pages/: cse.md
pygments/: dracula.py  generate.py
static/pygments/: dracula.css  dracula.min.css  inkpot.min.css  monokai.min.css  zenburn.css  zenburn.min.css
static/scripts/: dark_mode.js  dark_mode.min.js  disqus_lazyload.js  disqus_lazyload.min.js  lazyload.js  lazyload.min.js  luminous_settings.js  luminous_settings.min.js
static/stylesheet/: source-code-pro.css  source-code-pro.min.css  source-sans-pro.css  source-sans-pro.min.css  style.less  style.min.css  variables.less
templates/: archives.html  article.html  author.html  authors.html  base.html  categories.html  category.html  index.html  page.html  period_archives.html  tag.html  tags.html
templates/partial/: cc_license.html  cse.html  disqus.html  flex.html  last_commit.html  og.html  og_article.html  recaptcha.html  source_code.html
