[tool.poetry]
name = "modified-flex"
version = "0.0.1"
description = "Tema ini cuma hasil modifikasi dari Tema Flex saja"
authors = ["Farrel Franqois <farrel@franqois.id>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
Pygments = "*"
pygments-style-github = "*"
pygments-dracula = "*"
pygments-zenburn = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
